--- a/package.json
+++ b/package.json
@@ -9,15 +9,20 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.21",
+    "axios": "^1.12.2",
+    "lucide-react": "^0.544.0",
+    "next": "15.5.4",
+    "postcss": "^8.5.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.5.4"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
+    "daisyui": "^5.1.20",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4.1.13"
   }
 }
